--- a/src/main/resources/static/css/communitys.css
+++ b/src/main/resources/static/css/communitys.css
@@ -12,13 +12,17 @@ body {
     margin-bottom: 15px;
 }
 
-.media-object{
+.media-object {
     width: 38px;
     height: 38px;
 }
 
-.text-desc{
+.text-desc {
     font-size: 12px;
     font-weight: normal;
     color: #999;
+}
+
+.profile .section{
+    margin-top: 15px;
 }
