--- a/src/main/resources/static/css/communitys.css
+++ b/src/main/resources/static/css/communitys.css
@@ -35,7 +35,33 @@ body {
     margin-top: 25px;
 }
 
-.communitys-menu {
+.question-tag {
+    margin-right: 5px;
+}
+
+.question-related {
+    line-height: 20px;
+    font-size: 12px;
+    margin-left: 0;
+    list-style: none;
+    padding-left: 0;
+}
+
+.question-wechat {
+    width: 100%;
+}
+
+.publish-tag-tab {
+    display: none;
+    margin-top: 10px;
+    padding-top: 10px;
+}
+
+.publish-tag-tab .label-info {
+    margin-right: 10px;
+}
+
+.community-menu {
     display: block;
     color: #999;
     font-size: 13px;
@@ -92,7 +118,7 @@ body {
     cursor: pointer;
 }
 
-.menu .comment-icon :hover{
+.menu .comment-icon :hover {
     color: #499ef3;
 }
 
