--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -26,10 +26,17 @@
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading" th:text="${question.title}"></h4>
-                    <span class="text-desc"><span th:text="${question.commentCount}"></span> 个回复 • <span
-                            th:text="${question.viewCount}"></span> 次浏览 • <span
-                            th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span> </span>
+                    <h4 class="media-heading"></h4>
+                        <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}"></a>
+                    <span class="text-desc">
+                        <span th:text="${question.commentCount}"></span> 个回复 • <span
+                        th:text="${question.viewCount}"></span> 次浏览 • <span
+                        th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>•
+                    <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
+                        th:if="${session.user != null && session.user.id == question.creator}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                    </a>
+                    </span>
                 </div>
             </div>
 
@@ -66,7 +73,6 @@
                     </li>
                 </ul>
             </nav>
-
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="list-group section">
