--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -56,7 +56,7 @@
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
-                        th:if="${session.user != null && session.user.id == question.creator}">
+                       th:if="${session.user != null && session.user.id == question.creator}">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
                     </a>
                 </div>
@@ -119,12 +119,12 @@
                         <div class="media-left">
                             <a href="#">
                                 <img class="media-object img-rounded"
-                                     th:src="${question.user.avatarUrl}">
+                                     th:src="${session.user !=null ? session.user.avatarUrl : '/images/default-avatar.png'}">
                             </a>
                         </div>
                         <div class="media-body">
                             <h5 class="media-heading">
-                                <span th:text="${question.user.name}"></span>
+                                <span th:text="${session.user !=null ? session.user.name : '匿名用户'}"></span>
                             </h5>
                         </div>
                     </div>
