--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -17,5 +17,6 @@
         <p th:text="${message}">今天元旦，服务器放假啦！</p>
         <p><a class="btn btn-primary btn-lg" href="/" role="button">回到主页</a></p>
     </div>
+<div th:insert="~{footer :: foot}"></div>
 </body>
 </html>
